<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_facebook_button_background_color_selected"
    android:padding="10dp"
    tools:context="com.concurseiro.Views.PergunteMestreAceitePerguntaActivity">


    <ImageView
        android:id="@+id/image_foto_aluno"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/text_sua_pergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_foto_aluno"
        android:layout_marginTop="10dp"
        android:text="@string/Sua_pergunta"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_nome_aluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_sua_pergunta"
        android:layout_marginTop="10dp"
        android:text="@string/nome_aluno_padrao"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_nome_materia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_nome_aluno"
        android:layout_marginTop="10dp"
        android:text="@string/nome_materia"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_nome_materia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_passar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorTitle"
            android:padding="20dp"
            android:text="Passar" />

        <Button
            android:id="@+id/button_aceitar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="20dp"
            android:text="Aceitar" />

    </LinearLayout>
</RelativeLayout>
